# substrate-node-template

./: README.md  customSpec.json  customSpecRaw.json
node/src/: rpc.rs
pallets/kitties/: Cargo.toml
pallets/kitties/src/: lib.rs  mock.rs  tests.rs
pallets/open-grant/: Cargo.toml  types.json
pallets/open-grant/rpc/src/: lib.rs
pallets/open-grant/runtime-api/src/: lib.rs
pallets/open-grant/src/: lib.rs
pallets/poe/: Cargo.toml
pallets/poe/src/: lib.rs
pallets/proxy/: Cargo.toml
pallets/template/: Cargo.toml
pallets/template/src/: benchmarking.rs  lib.rs  weights.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
